--- a/test/extensions/local_address_selectors/filter_state_override/BUILD
+++ b/test/extensions/local_address_selectors/filter_state_override/BUILD
@@ -14,11 +14,11 @@ envoy_package()
 envoy_extension_cc_test(
     name = "config_test",
     srcs = ["config_test.cc"],
-    extension_names = ["envoy.upstream.local_address_selector.linux_network_namespace"],
+    extension_names = ["envoy.upstream.local_address_selector.filter_state_override"],
     deps = [
         "//source/common/network:address_lib",
         "//source/common/network:transport_socket_options_lib",
         "//source/common/stream_info:filter_state_lib",
-        "//source/extensions/local_address_selectors/linux_network_namespace:config",
+        "//source/extensions/local_address_selectors/filter_state_override:config",
     ],
 )
