--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -275,8 +275,8 @@ new_features:
     Add logging info for network ext_proc to filter state.
 - area: upstream
   change: |
-    Added an extension to override the :ref:`upstream Linux network namespace
-    <extension_envoy.upstream.local_address_selector.linux_network_namespace>` using a shared filter
+    Added an extension to override the :ref:`upstream bind address Linux network namespace
+    <extension_envoy.upstream.local_address_selector.filter_state_override>` using a shared filter
     state object.
 - area: formatter
   change: |
