ci: Test TSAN fail
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -1720,7 +1720,7 @@ envoy_cc_test(
     name = "load_stats_integration_test",
     size = "large",
     srcs = ["load_stats_integration_test.cc"],
-    rbe_pool = "4core",
+    rbe_pool = "linux_x64_large",
     deps = [
         ":http_integration_lib",
         "//test/config:utility_lib",
