--- a/.github/workflows/_run.yml
+++ b/.github/workflows/_run.yml
@@ -237,6 +237,7 @@ jobs:
         if mountpoint -q /mnt; then
             echo "has-mnt=true" >> "$GITHUB_OUTPUT"
         fi
+        USAGE="$(df --output=pcent /mnt | tail -n 1 | tr -d ' %')"
         if [[ "$USAGE" -ge 100 ]]; then
             echo "::warning::Disk usage for /mnt is at 100% ... remounting"
         fi
