--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -297,5 +297,8 @@ new_features:
     Added support for substitution formatting in direct response bodies via the new
     :ref:`body_format <envoy_v3_api_field_config.route.v3.DirectResponseAction.body_format>` field
     in :ref:`DirectResponseAction <envoy_v3_api_msg_config.route.v3.DirectResponseAction>`.
+- area: ext_proc
+  change: |
+    Add support for forwarding cluster metadata to ext_proc server.
 
 deprecated:
