--- a/.devcontainer/Dockerfile.in
+++ b/.devcontainer/Dockerfile.in
@@ -1,4 +1,4 @@
-FROM gcr.io/envoy-ci/envoy-build:abd41d4081d77bacbb246c9b952d49f816a9ee2f@sha256:faefd182b53aa2148382b3aaf4a8253f0981b77cb6e6104c7bdda6aa3e3ea2ca
+FROM %%ENVOY_BUILD_IMAGE%%
 
 ARG USERNAME=vscode
 ARG USER_UID=501
