--- a/test/extensions/filters/http/proto_api_scrubber/BUILD
+++ b/test/extensions/filters/http/proto_api_scrubber/BUILD
@@ -39,7 +39,10 @@ envoy_cc_test(
     data = ["//test/proto:apikeys_proto_descriptor"],
     rbe_pool = "6gig",
     deps = [
+        "//source/common/http/matching:inputs_lib",
         "//source/extensions/filters/http/proto_api_scrubber:filter",
+        "//source/extensions/matching/http/cel_input:cel_input_lib",
+        "//source/extensions/matching/input_matchers/cel_matcher:config",
         "//test/extensions/filters/http/grpc_field_extraction/message_converter:message_converter_test_lib",
         "//test/mocks/http:http_mocks",
         "//test/mocks/server:factory_context_mocks",
