--- a/contrib/postgres_inspector/filters/listener/test/BUILD
+++ b/contrib/postgres_inspector/filters/listener/test/BUILD
@@ -38,6 +38,7 @@ envoy_cc_test(
         "//test/integration:integration_lib",
         "//test/integration:utility_lib",
         "//test/test_common:utility_lib",
+        "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/network/tcp_proxy/v3:pkg_cc_proto",
     ],
 )
@@ -55,20 +56,6 @@ envoy_cc_test(
     ],
 )
 
-# Config test disabled due to complex namespace conflicts in test environment.
-# The Config class is thoroughly tested through unit tests.
-# envoy_cc_test(
-#     name = "config_test",
-#     srcs = ["config_test.cc"],
-#     repository = "@envoy",
-#     deps = [
-#         "//contrib/postgres_inspector/filters/listener/source:config",
-#         "//test/mocks/server:listener_factory_context_mocks",
-#         "//test/test_common:utility_lib",
-#         "@envoy_api//contrib/envoy/extensions/filters/listener/postgres_inspector/v3alpha:pkg_cc_proto",
-#     ],
-# )
-
 cc_library(
     name = "postgres_test_utils_lib",
     srcs = [],
@@ -80,17 +67,17 @@ cc_library(
 )
 
 envoy_cc_test(
-    name = "postgres_sni_routing_integration_test",
-    srcs = ["postgres_sni_routing_integration_test.cc"],
+    name = "postgres_inspector_sni_integration_test",
+    srcs = ["postgres_inspector_sni_integration_test.cc"],
     repository = "@envoy",
     deps = [
         ":postgres_test_utils_lib",
         "//contrib/postgres_inspector/filters/listener/source:config",
-        "//source/extensions/filters/listener/tls_inspector:config",
+        "//contrib/postgres_proxy/filters/network/source:config",
         "//source/extensions/filters/network/tcp_proxy:config",
-        "//test/extensions/filters/listener/tls_inspector:tls_utility_lib",
         "//test/integration:integration_lib",
         "//test/integration:utility_lib",
+        "@envoy_api//contrib/envoy/extensions/filters/network/postgres_proxy/v3alpha:pkg_cc_proto",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/network/tcp_proxy/v3:pkg_cc_proto",
     ],
