--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -123,6 +123,10 @@ bug_fixes:
   change: |
     Fixed a bug where attributes based on request headers (e.g. ``request.host``) were not sent to
     the ext_proc server if ext_proc was configured to only run on the encode path.
+- area: tcp_proxy
+  change: |
+    Fixed a connection leak in the TCP proxy when the ``receive_before_connect`` feature is enabled and the
+    downstream connection closes before the upstream connection is established.
 - area: connection
   change: |
     Fixed connection handling to properly propagate transport failure reasons to StreamInfo before raising
