tls_inspector: add early tls errors from tls inspector to downstream transport failure reason in streamInfo (#42034)
Propagate the transport error from the `tls_inspector` to the
`downstreamTransportFailureReason` in StreamInfo for access logging
prior to the real TLS handshake. Make sure the
`DOWNSTREAM_TRANSPORT_FAILURE_REASON` can capture the error from
tls_inspector, during the early return when there is no matching network
filter chain found and no real TLS handshake.

https://github.com/istio/istio/issues/58281#issue-3617381770

cc @frittentheke

Commit Message:
Additional Description:
Risk Level: low
Testing:
Docs Changes:
Release Notes:
Platform Specific Features:

---------

Signed-off-by: Boteng Yao <boteng@google.com>

Signed-off-by: botengyao <boteng@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -30,5 +30,9 @@ new_features:
     This can avoid unnecessary load shedding or overload actions.
     To enable, set ``envoy.reloadable_features.fixed_heap_use_allocated`` to true.
     The default algorithm (heap_size - pageheap_unmapped - pageheap_free) does not discount for free memory in TCMalloc caches.
+- area: tls_inspector
+  change: |
+    Propagate the transport error from the tls_inspector to the DownstreamTransportFailureReason in StreamInfo
+    for access logging prior to the TLS handshake.
 
 deprecated:
