--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -310,6 +310,10 @@ new_features:
     Added support for substitution formatting in direct response bodies via the new
     :ref:`body_format <envoy_v3_api_field_config.route.v3.DirectResponseAction.body_format>` field
     in :ref:`DirectResponseAction <envoy_v3_api_msg_config.route.v3.DirectResponseAction>`.
+- area: tls_inspector
+  change: |
+    Propagate the transport error from the tls_inspector to the DownstreamTransportFailureReason in StreamInfo
+    for access logging prior to the TLS handshake.
 - area: ext_proc
   change: |
     Add support for forwarding cluster metadata to ext_proc server.
