ext_authz: send local reply on failed response header mutations (#41844)
Commit Message: ext_authz: send local reply on failed response header
mutations
Additional Description:

Without this PR, the ext authz filter will silently (to the downstream
client) fail to add headers if it would violate the response header map
limits. This is bad because the app being proxied could rely on the
headers added by ext authz.

Instead it is better if the ext authz filter just sent a local reply the
same way ext_proc does. This way it will be clear that something went
wrong. If this behavior is undesirable, the filter can always be
configured with these check disabled.

Since we are now sending a local reply instead of an incomplete reply,
we can now do the simpler thing and just add headers and do a
post-check, which means we can also using the existing
headersWithinLimits function.

Risk Level: low
Testing: unit tested and integration tests updated
Docs Changes: config comments updated
Release Notes: changelog updated

---------

Signed-off-by: antoniovleonti <leonti@google.com>
Signed-off-by: Antonio V. Leonti <53806445+antoniovleonti@users.noreply.github.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -55,8 +55,8 @@ minor_behavior_changes:
     ``envoy.reloadable_features.ext_proc_stream_close_optimization`` to ``false``.
 - area: ext_authz
   change: |
-    Check that the response header count is less than the configured limits before applying mutations, and do not
-    add new headers if not.
+    Check that the response header count and size is less than the configured limits after applying
+    mutations and send a local reply if not.
 - area: ext_authz
   change: |
     Fixed HTTP ext_authz service to properly propagate headers (such as ``set-cookie``) back to clients. The
