--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -714,6 +714,7 @@ envoy_cc_test(
         ":http_integration_lib",
         ":integration_lib",
         "//test/test_common:test_runtime_lib",
+        "@envoy_api//envoy/config/route/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/http/router/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/http/upstream_codec/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/network/http_connection_manager/v3:pkg_cc_proto",
