mobile/android: Test/fix emulator failure
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/mobile/.bazelrc
+++ b/mobile/.bazelrc
@@ -1,6 +1,8 @@
 ## Any new configs - ie that are not defined in Envoy's bazelrc ...
 #    **should be prefixed with mobile-**
 
+# ARB CHANGE
+
 # Envoy Mobile Bazel build/test options.
 try-import ../.bazelrc
 
