--- a/source/common/quic/BUILD
+++ b/source/common/quic/BUILD
@@ -291,6 +291,7 @@ envoy_cc_library(
         "//source/common/common:assert_lib",
         "//source/common/http:header_map_lib",
         "@com_github_google_quiche//:quic_server_http_spdy_session_lib",
+        "@com_google_absl//absl/log:absl_check",
         "@com_google_absl//absl/types:optional",
     ]) + envoy_select_enable_http_datagrams([
         ":http_datagram_handler",
