--- a/.github/workflows/codeql-daily.yml
+++ b/.github/workflows/codeql-daily.yml
@@ -58,7 +58,7 @@ jobs:
 
     - name: Build
       run: |
-       bazel/setup_clang.sh bin/clang18.1.8
+       bazel/setup_clang.sh "$(realpath bin/clang18.1.8)"
        bazelisk shutdown
        bazel build \
            -c fastbuild \
