--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -176,6 +176,11 @@ new_features:
 - area: udp_sink
   change: |
     Enhanced the UDP sink to support tapped messages larger than 64 KB.
+- area: listener
+  change: |
+    Marked the :ref:`filter_chain_matcher <envoy_v3_api_field_config.listener.v3.Listener.filter_chain_matcher>`
+    field as stable by removing the work-in-progress annotation. The xDS matcher API for filter chain selection
+    has been thoroughly tested and should be ready for production use now.
 - area: access_log
   change: |
     Added a new :ref:`access logger <envoy_v3_api_msg_extensions.access_loggers.stats.v3.Config>` which emits
