`ranlib` == `ar -s`; just use $(AR), as that's already specified.
Signed-off-by: Alejandro R. Sedeño <asedeno@google.com>

--- a/bazel/foreign_cc/BUILD
+++ b/bazel/foreign_cc/BUILD
@@ -32,7 +32,7 @@ configure_make(
         "//bazel:clang_build": {
             "AR": "$(AR)",
             "LD": "$(LD)",
-            "RANLIB": "$(LLVM_DIRECTORY)/bin/llvm-ranlib",
+            "RANLIB": "$(AR) -s",
         },
         "//conditions:default": {},
     }),
