aws: match_included_headers feature (#41639)
Commit Message: aws: match_included_headers feature
Additional Description: Small feature change requested by a customer to
allow for positive matching of permitted headers to sign, compared to
the existing match_excluded_headers negative match. Also some minor doc
readability fixes added while looking at the API.
Risk Level: Low
Testing: Unit
Docs Changes: API documentation
Release Notes: Changelog
Platform Specific Features:
[Optional Runtime guard:]
[Optional Fixes #Issue]
[Optional Fixes commit #PR or SHA]
[Optional Deprecated:]
[Optional [API
Considerations](https://github.com/envoyproxy/envoy/blob/main/api/review_checklist.md):]

---------

Signed-off-by: Nigel Brittain <nbaws@amazon.com>
Signed-off-by: Nigel Brittain <108375408+nbaws@users.noreply.github.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -335,5 +335,9 @@ new_features:
 - area: ext_proc
   change: |
     Add support for forwarding cluster metadata to ext_proc server.
+- area: aws
+  change: |
+    Added new feature ``match_included_headers`` to the request signing extension, that allows for a positive header match and
+    excludes all other non-SigV4-required headers.
 
 deprecated:
