--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -138,6 +138,10 @@ bug_fixes:
     close events. This ensures the ``connection.transport_failure_reason`` CEL attribute and
     ``DOWNSTREAM_TRANSPORT_FAILURE_REASON`` access log formatter are populated correctly for all connection
     types and available to all network filters.
+- area: aws
+  change: |
+    Changes web identity token file watching behavior in the aws signing common components. This ensures that if the token file is rotated,
+    the new token will be picked up.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
