--- a/source/extensions/extensions_metadata.yaml
+++ b/source/extensions/extensions_metadata.yaml
@@ -2106,10 +2106,17 @@ envoy.filters.http.dynamic_modules:
   status_upstream: alpha
   type_urls:
   - envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter
-envoy.certificate_selectors.on_demand_secret:
+envoy.tls.certificate_selectors.on_demand_secret:
   categories:
   - envoy.tls.certificate_selectors
   security_posture: unknown
   status: alpha
   type_urls:
   - envoy.extensions.certificate_selectors.on_demand_secret.v3.Config
+envoy.tls.certificate_mappers.static_name:
+  categories:
+  - envoy.tls.certificate_mappers
+  security_posture: unknown
+  status: alpha
+  type_urls:
+  - envoy.extensions.certificate_selectors.on_demand_secret.v3.StaticName
