--- a/test/extensions/certificate_selectors/on_demand/BUILD
+++ b/test/extensions/certificate_selectors/on_demand/BUILD
@@ -34,6 +34,7 @@ envoy_extension_cc_test(
         "//source/common/network:utility_lib",
         "//source/common/tls:context_config_lib",
         "//source/common/tls:context_lib",
+        "//source/extensions/certificate_selectors/on_demand:config",
         "//source/extensions/transport_sockets/tls:config",
         "//test/common/grpc:grpc_client_integration_lib",
         "//test/config/integration/certs:certs_info",
@@ -44,6 +45,7 @@ envoy_extension_cc_test(
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
+        "@envoy_api//envoy/extensions/certificate_selectors/on_demand_secret/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/transport_sockets/tls/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/discovery/v3:pkg_cc_proto",
         "@envoy_api//envoy/service/secret/v3:pkg_cc_proto",
