--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -275,10 +275,11 @@ new_features:
     the time point of upstream response body receiving begin.
 - area: outlier_detection
   change: |
-    Added :ref:`detect_degraded <envoy_v3_api_field_config.cluster.v3.OutlierDetection.detect_degraded>`
+    Added :ref:`detect_degraded_hosts <envoy_v3_api_field_config.cluster.v3.OutlierDetection.detect_degraded_hosts>`
     to enable passive degraded host detection. When enabled, outlier detection marks hosts as degraded when they return
     the ``x-envoy-degraded`` header with successful (2xx) responses. Degraded hosts are deprioritized in load balancing
-    but remain in rotation (not ejected). The feature uses the same backoff algorithm as ejection with configurable
-    base and maximum timeout parameters. Defaults to false.
+    but remain in rotation (not ejected). The degraded state is cleared using the same backoff algorithm as ejection, with the
+    degradation period calculated as ``base_ejection_time`` multiplied by the number of times the host has been marked
+    as degraded, capped by ``max_ejection_time``. Defaults to false.
 
 deprecated:
