--- a/contrib/qat/BUILD
+++ b/contrib/qat/BUILD
@@ -14,6 +14,22 @@ envoy_contrib_package()
 # extension.
 
 configure_make(
+    name = "numa",
+    autogen = True,
+    configure_in_place = True,
+    # Workaround for error: use of undeclared identifier 'redacted'
+    # https://github.com/bazel-contrib/rules_foreign_cc/issues/239#issuecomment-531998034
+    configure_options = ["CFLAGS='-Dredacted=\"redacted\"'"],
+    lib_source = "@com_github_numactl_numactl//:all",
+    out_static_libs = [
+        "libnuma.a",
+    ],
+    target_compatible_with = envoy_contrib_linux_x86_64_constraints(),
+    visibility = ["//visibility:public"],
+)
+
+
+configure_make(
     name = "qatlib",
     autogen = True,
     configure_in_place = True,
@@ -33,6 +49,6 @@ configure_make(
     target_compatible_with = envoy_contrib_linux_x86_64_constraints(),
     visibility = ["//visibility:public"],
     # Use boringssl alias to select fips vs non-fips version.
-    deps = ["//bazel:boringcrypto"],
+    deps = ["//bazel:boringcrypto", ":numa"],
     alwayslink = True,
 )
