--- a/docs/root/configuration/best_practices/_include/edge.yaml
+++ b/docs/root/configuration/best_practices/_include/edge.yaml
@@ -5,7 +5,7 @@ overload_manager:
     typed_config:
       "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
       # TODO: Tune for your system.
-      max_heap_size_bytes: 2147483648  # 2 GiB
+      max_heap_size_bytes: 2147483648 # 2 GiB
   actions:
   - name: "envoy.overload_actions.shrink_heap"
     triggers:
@@ -38,19 +38,19 @@ static_resources:
     - name: "envoy.filters.listener.tls_inspector"
       typed_config:
         "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
-    per_connection_buffer_limit_bytes: 32768  # 32 KiB
+    per_connection_buffer_limit_bytes: 32768 # 32 KiB
     filter_chains:
     - filter_chain_match:
-        server_names: ["example.com", "www.example.com"]
+        server_names: [ "example.com", "www.example.com" ]
       transport_socket:
         name: envoy.transport_sockets.tls
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
           common_tls_context:
             tls_certificates:
-            - certificate_chain: {filename: "certs/servercert.pem"}
-              private_key: {filename: "certs/serverkey.pem"}
-            alpn_protocols: ["h2,http/1.1"]
+            - certificate_chain: { filename: "certs/servercert.pem" }
+              private_key: { filename: "certs/serverkey.pem" }
+            alpn_protocols: [ "h2,http/1.1" ]
       filters:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
@@ -61,14 +61,14 @@ static_resources:
           merge_slashes: true
           path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
           common_http_protocol_options:
-            idle_timeout: 3600s  # 1 hour
+            idle_timeout: 3600s # 1 hour
             headers_with_underscores_action: REJECT_REQUEST
           http2_protocol_options:
             max_concurrent_streams: 100
-            initial_stream_window_size: 65536  # 64 KiB
-            initial_connection_window_size: 1048576  # 1 MiB
-          stream_idle_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
-          request_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
+            initial_stream_window_size: 65536 # 64 KiB
+            initial_connection_window_size: 1048576 # 1 MiB
+          stream_idle_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
+          request_timeout: 300s # 5 mins, must be disabled for long-lived and streaming requests
           http_filters:
           - name: envoy.filters.http.router
             typed_config:
@@ -76,15 +76,15 @@ static_resources:
           route_config:
             virtual_hosts:
             - name: default
-              domains: ["*"]
+              domains: [ "*" ]
               routes:
-              - match: {prefix: "/"}
+              - match: { prefix: "/" }
                 route:
                   cluster: service_foo
-                  idle_timeout: 15s  # must be disabled for long-lived and streaming requests
-  clusters:
+                  timeout: 15s # must be disabled for long-lived and streaming requests
+                  idle_timeout: 15s # must be disabled for long-lived and streaming requests  clusters:
   - name: service_foo
-    per_connection_buffer_limit_bytes: 32768  # 32 KiB
+    per_connection_buffer_limit_bytes: 32768 # 32 KiB
     load_assignment:
       cluster_name: some_service
       endpoints:
@@ -99,8 +99,8 @@ static_resources:
         "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
         explicit_http_config:
           http2_protocol_options:
-            initial_stream_window_size: 65536  # 64 KiB
-            initial_connection_window_size: 1048576  # 1 MiB
+            initial_stream_window_size: 65536 # 64 KiB
+            initial_connection_window_size: 1048576 # 1 MiB
 
 layered_runtime:
   layers:
