--- a/test/extensions/filters/http/proto_api_scrubber/BUILD
+++ b/test/extensions/filters/http/proto_api_scrubber/BUILD
@@ -75,5 +75,6 @@ envoy_cc_test(
         "//test/integration:http_protocol_integration_lib",
         "//test/proto:apikeys_proto_cc_proto",
         "@com_google_absl//absl/strings:str_format",
+        "@envoy_api//envoy/extensions/filters/http/proto_api_scrubber/v3:pkg_cc_proto",
     ],
 )
